--- a/bedbug-control-services.html
+++ b/bedbug-control-services.html
@@ -102,17 +102,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -242,12 +242,15 @@
               <span><i class="fa-sharp fas fa-star"></i>4.8</span>
             </div>
 
-            <h2 class="h3 sec-title page-title">Stop Bed Bugs Fast — Safe, Discreet & Guaranteed</h2>
+            <h2 class="h3 sec-title page-title">Get Rid of Bed Bugs Fast — Safe, Discreet & Guaranteed Solutions/h2>
             <p>
-              Bed bugs thrive in dense city living and spread via travel and second-hand furniture.
-              DIY sprays often miss eggs and deep harborages, so infestations rebound. Titan delivers a
-              <strong>multi-visit, inspection-led program</strong> that targets eggs, nymphs and adults for complete, lasting relief.
-              Our certified teams work discreetly across <strong>Hyderabad</strong> with clear safety guidance and a straightforward service guarantee.
+              Bed bugs thrive in densely populated urban environments and commonly spread through travel,
+              luggage, and second-hand furniture. DIY sprays often fail to reach eggs and deep hiding spots,
+              causing infestations to return. Titan Pest Control provides a thorough, inspection-led,
+              multi-visit bed bug control program that targets eggs, nymphs, and adult bed bugs for complete and long-lasting relief.
+
+              Our certified pest control technicians in Hyderabad carry out treatments discreetly, follow strict safety guidelines,
+              and offer a clear, reliable service guarantee, ensuring peace of mind for homes, hotels, and businesses.
             </p>
 
             <h3 class="mt-40 mb-4">Why Choose Titan</h3>
@@ -256,7 +259,6 @@
               <li><strong>Discreet service:</strong> Professional conduct and unmarked vehicles to protect your privacy.</li>
               <li><strong>Clear, written plan:</strong> Free inspection, itemized quote and what-to-expect timeline.</li>
               <li><strong>Safe for homes & businesses:</strong> Govt-approved products and detailed re-entry instructions.</li>
-              <li><strong>Coverage everywhere:</strong> South/West/East/North/Central Hyderabad, plus Gurugram, Noida, Faridabad & Ghaziabad.</li>
             </ul>
 
             <h3 class="mt-40 mb-4">Our Treatment Method (What Actually Works)</h3>
@@ -283,13 +285,6 @@
               <li><strong>Prevention tips:</strong> Sealing and housekeeping guidance to reduce re-infestation risk.</li>
             </ol>
 
-            <h3 class="mt-40 mb-3">Pricing & Plans</h3>
-            <p>
-              Cost depends on <em>rooms treated</em>, <em>severity</em>, and <em>methods</em> (chemical/steam/heat). One-off
-              “quick fixes” rarely work for bed bugs; a planned series is the proven approach. Start with a
-              <strong>free inspection</strong> and get a written, itemized quote—no surprises.
-            </p>
-
             <div class="mt-4 d-flex flex-wrap gap-2">
               <a class="th-btn rounded-12 style3" href="/contact">
                 Book Free Inspection <i class="fas fa-arrow-right ms-2"></i>
@@ -299,29 +294,18 @@
               </a>
             </div>
 
-            <h3 class="mt-40 mb-3">How to Prepare (Boosts Success)</h3>
-            <ul>
-              <li>Bag clutter near beds/sofas; keep sealed between visits.</li>
-              <li>Wash & dry linens/clothes on high heat; store in sealed bags.</li>
-              <li>Pull beds 6–8 inches from walls; remove bed-skirts touching floor.</li>
-              <li>Do not move items from infested rooms into clean rooms pre-treatment.</li>
-              <li>After treatment, follow re-entry and cleaning guidance precisely.</li>
-            </ul>
-
-            <h3 class="mt-40 mb-4">Service Coverage – Hyderabad</h3>
-            <p>South (GK, CR Park, Hauz Khas, Saket), West (Dwarka, Janakpuri), East (Mayur Vihar, Laxmi Nagar), North (Rohini, Pitampura), Central (CP, Karol Bagh), plus Gurugram, Noida, Faridabad and Ghaziabad.</p>
-
-            <h3 class="mt-40 mb-4">FAQs</h3>
+            <h3 class="mt-40 mb-4">Frequently Asked Questions – Bed Bug Control</h3>
             <div class="accordion mt-40" id="faqAccordion">
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-1">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-1" aria-expanded="true" aria-controls="faqCollapse-1">
-                    How do I know if I have bed bugs?
+                   How can I tell if I have a bed bug infestation?
                   </button>
                 </div>
                 <div id="faqCollapse-1" class="accordion-collapse collapse show" aria-labelledby="faq-item-1" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Itchy bites in lines/clusters, dark fecal spots, shed skins, a musty odor and live bugs/eggs along seams.
+                   Common signs include itchy red bites on the skin, dark spots or blood stains on mattresses and bedding, shed skins, and a musty odor in sleeping areas.
+                    Our technicians also inspect hidden spots like mattress seams, furniture joints, and cracks in walls for a thorough assessment.
                   </div>
                 </div>
               </div>
@@ -329,12 +313,13 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-2">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-2" aria-expanded="false" aria-controls="faqCollapse-2">
-                    How many treatments will I need?
+                    Are bed bug treatments safe for children and pets?
                   </button>
                 </div>
                 <div id="faqCollapse-2" class="accordion-collapse collapse" aria-labelledby="faq-item-2" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Typically 2–3 visits, 10–14 days apart. Severe or multi-room spread may need an extra follow-up.
+                    Yes. Titan Pest Control uses certified, eco-friendly, and safe chemicals applied by trained professionals.
+                    Our team ensures minimal exposure and provides clear safety instructions for families and pets.
                   </div>
                 </div>
               </div>
@@ -342,12 +327,13 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-3">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-3" aria-expanded="false" aria-controls="faqCollapse-3">
-                    Is it safe for kids and pets?
+                    How many visits are required to completely eliminate bed bugs?
                   </button>
                 </div>
                 <div id="faqCollapse-3" class="accordion-collapse collapse" aria-labelledby="faq-item-3" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes—govt-approved products, clear prep and re-entry guidance. Steam/heat used where suitable.
+                   Bed bug treatments usually require 2–3 visits, depending on the severity of the infestation. Our multi-visit, 
+                   inspection-led program targets eggs, nymphs, and adult bed bugs to ensure complete and long-lasting elimination.
                   </div>
                 </div>
               </div>
@@ -355,12 +341,14 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-4">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-4" aria-expanded="false" aria-controls="faqCollapse-4">
-                    Do you offer discreet commercial service?
+                    Can bed bugs return after treatment?
                   </button>
                 </div>
                 <div id="faqCollapse-4" class="accordion-collapse collapse" aria-labelledby="faq-item-4" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes—hotels, hostels, PGs, hospitals, theatres and offices with SOPs, logs and off-hour scheduling.
+                    If proper preventive measures are not followed, bed bugs can reappear.
+                    Titan Pest Control provides guidance on cleaning, monitoring,
+                    and preventive practices to minimize the risk of re-infestation and ensure long-term protection.
                   </div>
                 </div>
               </div>
@@ -368,12 +356,13 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-5">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-5" aria-expanded="false" aria-controls="faqCollapse-5">
-                    How soon can you inspect?
+                    How quickly will I see results after bed bug treatment?
                   </button>
                 </div>
                 <div id="faqCollapse-5" class="accordion-collapse collapse" aria-labelledby="faq-item-5" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Same-day slots are often available across most localities in Hyderabad.
+                    Most visible signs of bed bug activity reduce within 24–48 hours, but complete elimination usually requires 2–3 visits.
+                    Our multi-stage treatment ensures all life stages—eggs, nymphs, and adults—are effectively removed.
                   </div>
                 </div>
               </div>
@@ -588,6 +577,7 @@
 
 </body>
 </html>
+
 
 
 
