--- a/termite-control-services-hyderabad.html
+++ b/termite-control-services-hyderabad.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/web" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -78,7 +78,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpg" alt="Titan Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -140,13 +140,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" style="height: 4rem; " alt="Titan Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem; " alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -326,7 +326,7 @@
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);z-index:1;border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Need Anti-Termite Protection?</h3>
-              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Certified Reticulation Experts</p>
               <h3 class="box-link"><a href="tel:+919666665400">+91 9666665400</a></h3>
               <a href="/contact" class="th-btn style2">Get a Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -379,7 +379,7 @@
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
                 Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
@@ -506,4 +506,5 @@
 
 </body>
 </html>
+
 
