--- a/termite-control-services-hyderabad.html
+++ b/termite-control-services-hyderabad.html
@@ -9,21 +9,21 @@
   <meta name="apple-mobile-web-app-title" content="Titan">
 
   <!-- Primary SEO -->
-  <title>Anti-Termite Reticulation System Hyderabad | Pre-Construction Termite Protection | Titan</title>
+  <title>Termite Control Services Hyderabad | Pre-Construction Termite Protection | Titan</title>
   <meta name="description" content="Professional anti-termite reticulation system installation in Hyderabad. Long-term protection for new constructions &amp; renovations. Certified technicians, eco-safe chemicals &amp; 10-year warranty. Call +91-9666665400 now.">
   <meta name="keywords" content="anti termite reticulation system Hyderabad, termite piping system Hyderabad, pre construction anti termite treatment, anti termite treatment for new buildings, termite pipe system installation, anti termite chemical treatment Hyderabad, Titan termite control Hyderabad">  <meta name="robots" content="index,follow">
   <link rel="canonical" href="anti-termite-reticulation-system.html">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Anti-Termite Reticulation System Hyderabad | Titan Pest Control">
+  <meta property="og:title" content="Termite Control Services Hyderabad | Titan Pest Control">
   <meta property="og:description" content="Certified anti-termite reticulation piping system with 10-year warranty. Permanent protection for homes, offices &amp; new construction projects in Hyderabad.">
   <meta property="og:image" content="https://Titanpestcontrol.com/assets/img/service/anti-termite-reticulation-system.jpeg">
   <meta property="og:url" content="https://Titanpestcontrol.com/anti-termite-reticulation-system">
   <meta property="og:site_name" content="Titan Pest Control">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Anti-Termite Reticulation System Hyderabad | Titan Pest Control">
+  <meta name="twitter:title" content="Termite Control Services Hyderabad | Titan Pest Control">
   <meta name="twitter:description" content="Certified anti-termite reticulation piping system with 10-year warranty. Permanent protection for homes, offices &amp; new construction projects in Hyderabad.">
   <meta name="twitter:image" content="https://Titanpestcontrol.com/assets/img/service/anti-termite-reticulation-system.jpeg">
   <meta name="twitter:url" content="https://Titanpestcontrol.com/anti-termite-reticulation-system">
@@ -58,8 +58,8 @@
   <!-- JSON-LD (page-provided) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://Titanpestcontrol.com/","name":"Titan Pest Control","potentialAction":{"@type":"SearchAction","target":"https://Titanpestcontrol.com/search?q={query}","query-input":"required name=query"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"ProfessionalService","name":"Titan Pest Control - Anti-Termite Reticulation","image":"https://Titanpestcontrol.com/assets/img/service/anti-termite-reticulation-system.jpeg","url":"https://Titanpestcontrol.com/anti-termite-reticulation-system","telephone":"+91-9666665400","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Front Side, Okhla Rd, Sarai Jullena","addressLocality":"New Hyderabad","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"},"areaServed":["Hyderabad","Noida","Gurgaon","Faridabad","Ghaziabad","Greater Noida"],"priceRange":"₹₹₹"}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Anti-Termite Reticulation System","provider":{"@type":"Organization","name":"Titan Pest Control","url":"https://Titanpestcontrol.com"},"areaServed":["Hyderabad"],"description":"Installation of professional anti-termite reticulation piping system in Hyderabad. Provides long-term termite protection with eco-safe chemicals and 10-year warranty.","offers":{"@type":"Offer","priceCurrency":"INR","price":"5000","availability":"https://schema.org/InStock"}}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is an anti-termite reticulation system?","acceptedAnswer":{"@type":"Answer","text":"It is a specialized piping system installed beneath the flooring during construction. It allows even distribution of anti-termite chemicals, creating a long-term protective barrier against termite infestation."}},{"@type":"Question","name":"Is this system suitable for existing buildings?","acceptedAnswer":{"@type":"Answer","text":"Yes, the system can be retrofitted in renovation projects as well as installed in pre-construction stages for new buildings."}},{"@type":"Question","name":"How long does the protection last?","acceptedAnswer":{"@type":"Answer","text":"Titan provides a 10-year warranty. With scheduled replenishment of chemicals, the system ensures long-term termite prevention."}}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Termite Control Services","provider":{"@type":"Organization","name":"Titan Pest Control","url":"https://Titanpestcontrol.com"},"areaServed":["Hyderabad"],"description":"Installation of professional anti-termite reticulation piping system in Hyderabad. Provides long-term termite protection with eco-safe chemicals and 10-year warranty.","offers":{"@type":"Offer","priceCurrency":"INR","price":"5000","availability":"https://schema.org/InStock"}}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is an Termite Control Services?","acceptedAnswer":{"@type":"Answer","text":"It is a specialized piping system installed beneath the flooring during construction. It allows even distribution of anti-termite chemicals, creating a long-term protective barrier against termite infestation."}},{"@type":"Question","name":"Is this system suitable for existing buildings?","acceptedAnswer":{"@type":"Answer","text":"Yes, the system can be retrofitted in renovation projects as well as installed in pre-construction stages for new buildings."}},{"@type":"Question","name":"How long does the protection last?","acceptedAnswer":{"@type":"Answer","text":"Titan provides a 10-year warranty. With scheduled replenishment of chemicals, the system ensures long-term termite prevention."}}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://Titanpestcontrol.com/"},{"@type":"ListItem","position":2,"name":"Our Services","item":"https://Titanpestcontrol.com/service"},{"@type":"ListItem","position":3,"name":"Anti-Termite Reticulation System","item":"https://Titanpestcontrol.com/anti-termite-reticulation-system"}]}</script>
 </head>
 
@@ -96,8 +96,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                 <li><a href="termite-control-services-hyderabad.html""class=active">Termite Control Service</a></li>
-                <li><a href="bird-control.html">Bird Control Service</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
@@ -164,8 +162,6 @@
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                           <li><a href="termite-control-services-hyderabad.html""class=active">Termite Control Service</a></li>
-                          <li><a href="bird-control.html">Bird Control Service</a></li>
-                          <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
@@ -218,10 +214,10 @@
 <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcumb-bg.jpg">
   <div class="container">
     <div class="breadcumb-content">
-      <h1 class="breadcumb-title">Anti-Termite Reticulation System – Hyderabad</h1>
+      <h1 class="breadcumb-title">Termite Control Services – Hyderabad</h1>
       <ul class="breadcumb-menu">
         <li><a href="index.htm">Home</a></li>
-        <li>Anti-Termite Reticulation System</li>
+        <li>Termite Control Service</li>
       </ul>
     </div>
   </div>
@@ -237,25 +233,24 @@
       <div class="col-xxl-8 col-lg-7">
         <div class="page-single mb-30">
           <div class="page-img">
-            <img src="assets/img/service/anti-termite-reticulation-system.jpeg" alt="Anti-Termite Reticulation System installation in Hyderabad" loading="lazy">
+            <img src="assets/img/service/anti-termite-reticulation-system.jpeg" alt="Termite Control Service in Hyderabad" loading="lazy">
           </div>
           <div class="page-content">
-            <h2 class="h3 sec-title page-title">Permanent Termite Protection for New Constructions</h2>
+            <h2 class="h3 sec-title page-title">Trusted Termite Protection Services for New Buildings in Hyderabad</h2>
             <p>
-              Termites silently damage wooden structures, furniture, and foundations.  
-              To prevent costly infestations, <strong>TITAN Pest Control</strong> offers the  
-              <strong>Anti-Termite Reticulation System</strong> – a scientifically designed piping system installed at the pre-construction or renovation stage.  
-              It allows <em>uniform chemical distribution</em> beneath the floor and around the foundation, forming a long-lasting barrier against termites.
+              Termites can silently destroy wooden structures, furniture, and even building foundations, leading to costly repairs.
+              To protect your property, Titan Pest Control provides the Anti-Termite Reticulation System – a scientifically designed piping system installed
+              during the pre-construction or renovation stage. This system ensures uniform distribution of termite-safe chemicals beneath the flooring and around the foundation,
+              creating a long-lasting protective barrier that prevents termite infestations and safeguards your investment.
             </p>
 
-            <h3 class="mt-40 mb-4">Why Choose Our Reticulation System?</h3>
-            <ul>
-              <li><strong>10-Year Warranty:</strong> Long-term protection with documented assurance.</li>
-              <li><strong>Safe & Certified Chemicals:</strong> Govt.-approved, eco-safe termiticides.</li>
-              <li><strong>Easy Maintenance:</strong> Refilling points allow quick recharging without drilling.</li>
-              <li><strong>Permanent Protection:</strong> Prevents termites from reaching walls and flooring.</li>
-              <li><strong>Ideal for Builders & Owners:</strong> Perfect for new buildings, housing societies, offices & warehouses.</li>
-            </ul>
+            <h3 class="mt-40 mb-4">Why Choose Titan Pest Control for Termite Control?</h3>
+            <p>
+              Titan Pest Control offers reliable and long-lasting termite control solutions designed to protect your home and property.
+              Our trained and certified technicians use advanced techniques and government-approved chemicals for effective results.
+              We focus on eliminating termites at the source while preventing future infestations. With inspection-led treatment plans, we ensure maximum coverage and safety.
+              Our commitment to quality service and customer satisfaction makes us a trusted choice for termite protection.
+            </p>
 
             <h3 class="mt-40 mb-4">Installation Process</h3>
             <ol>
@@ -266,36 +261,42 @@
               <li><strong>Documentation:</strong> Service reports, warranty cards, and maintenance schedule provided.</li>
             </ol>
 
-            <h3 class="mt-40 mb-4">FAQs – Anti-Termite Reticulation</h3>
+            <h3 class="mt-40 mb-4">Frequently Asked Questions – Termite Control</h3>
             <div class="accordion mt-40" id="faqAccordion">
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-1">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-1">
-                    What is an anti-termite reticulation system?
+                    How can I know if my property has a termite problem?
                   </button>
                 </div>
                 <div id="faqCollapse-1" class="accordion-collapse collapse show">
-                  <div class="accordion-body">It is a piping system installed during construction that delivers termiticide evenly, creating a protective barrier under the floor and around the foundation.</div>
+                  <div class="accordion-body">Common signs of termites include hollow-sounding wood, mud tubes on walls, damaged furniture, and unexplained cracks.
+                    A professional inspection by Titan Pest Control helps detect hidden termite activity early.
+                  </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-2">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-2">
-                    Can this system be used in existing buildings?
+                    Is termite control treatment safe for my family and pets?
                   </button>
                 </div>
                 <div id="faqCollapse-2" class="accordion-collapse collapse">
-                  <div class="accordion-body">Yes, the system can be installed in renovation projects as well, though it is most effective at the pre-construction stage.</div>
+                  <div class="accordion-body">Yes. We use government-approved and eco-friendly 
+                    termite control chemicals applied by trained professionals,
+                    ensuring safety for families, pets, and the surrounding environment.</div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-3">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-3">
-                    How often do I need to refill the system?
+                    How long does termite control treatment last?
                   </button>
                 </div>
                 <div id="faqCollapse-3" class="accordion-collapse collapse">
-                  <div class="accordion-body">Chemical recharging is usually recommended every 3–5 years depending on the property and soil conditions.</div>
+                  <div class="accordion-body">Termite control treatments can provide protection for several years, depending on the method used and site conditions.
+                    Our services include preventive measures and guidance to ensure long-term termite protection.
+                  </div>
                 </div>
               </div>
             </div>
@@ -425,8 +426,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
-                <li><a href="bird-control.html">Bird Control</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
               </ul>
             </div>
@@ -506,6 +505,7 @@
 
 </body>
 </html>
+
 
 
 
