--- a/anti-termite-reticulation-system.html
+++ b/anti-termite-reticulation-system.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/webp" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -57,7 +57,7 @@
   
   <!-- JSON-LD (page-provided) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://titanpestcontrol.com/","name":"Titan Pest Control","potentialAction":{"@type":"SearchAction","target":"https://titanpestcontrol.com/search?q={query}","query-input":"required name=query"}}</script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Anti Termite Reticulation System","provider":{"@type":"LocalBusiness","name":"Titan Pest Control","image":"https://titanpestcontrol.com/assets/img/logo1.png","url":"https://titanpestcontrol.com","telephone":"+91-9666665400","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Sarai Jullena, Okhla Road","addressLocality":"New Hyderabad","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"}},"areaServed":["Hyderabad","Hyderabad","Noida","Gurugram","Faridabad","Ghaziabad"],"description":"Pre & post-construction termite-proofing using an underground pipe network with recharge ports for periodic termiticide replenishment. Long-lasting, low-disruption protection.","offers":{"@type":"Offer","priceCurrency":"INR","price":"5000","priceSpecification":{"@type":"UnitPriceSpecification","price":"5000","priceCurrency":"INR","unitText":"Starting Price"}}}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Anti Termite Reticulation System","provider":{"@type":"LocalBusiness","name":"Titan Pest Control","image":"https://titanpestcontrol.com/assets/img/logo.webp","url":"https://titanpestcontrol.com","telephone":"+91-9666665400","address":{"@type":"PostalAddress","streetAddress":"22 Ground Floor, Sarai Jullena, Okhla Road","addressLocality":"New Hyderabad","addressRegion":"Hyderabad","postalCode":"110025","addressCountry":"IN"}},"areaServed":["Hyderabad","Hyderabad","Noida","Gurugram","Faridabad","Ghaziabad"],"description":"Pre & post-construction termite-proofing using an underground pipe network with recharge ports for periodic termiticide replenishment. Long-lasting, low-disruption protection.","offers":{"@type":"Offer","priceCurrency":"INR","price":"5000","priceSpecification":{"@type":"UnitPriceSpecification","price":"5000","priceCurrency":"INR","unitText":"Starting Price"}}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What is an Anti-Termite Reticulation System?","acceptedAnswer":{"@type":"Answer","text":"It’s an underground pipe network installed around/under the foundation that enables uniform injection and future re-injection of termiticide via surface ports, forming a long-term soil barrier against subterranean termites."}},{"@type":"Question","name":"How long does it last and how often is refilling needed?","acceptedAnswer":{"@type":"Answer","text":"Properly installed systems protect for 10+ years with periodic replenishment—typically every 3–5 years depending on soil conditions and the chemical used."}},{"@type":"Question","name":"Is it safe for homes and pets?","acceptedAnswer":{"@type":"Answer","text":"Yes. We use government-approved subterranean termiticides, and the barrier remains in the soil outside the living area, minimizing exposure."}}]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://titanpestcontrol.com/"},{"@type":"ListItem","position":2,"name":"Our Services","item":"https://titanpestcontrol.com/service"},{"@type":"ListItem","position":3,"name":"Anti Termite Reticulation System","item":"https://titanpestcontrol.com/anti-termite-reticulation-system"}]}</script>
 </head>
@@ -77,7 +77,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -103,17 +103,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
-                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
-                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
-                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
-                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
-                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
-                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
-                <li><a href="pest-control-kphb.html">KPHB</a></li>
-                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-service-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-service-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-service-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-service-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-service-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-service-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-service-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-service-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-service-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-service-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-service-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -139,13 +139,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem;" alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -350,7 +350,7 @@
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);z-index:1;border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Talk to Reticulation Experts</h3>
-              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Free on-site assessment</p>
               <h3 class="box-link"><a href="tel:+919666665400">+91 9666665400</a></h3>
               <a href="https://titanpestcontrol.com/contact" class="th-btn style2">Get a Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -403,7 +403,7 @@
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
                 Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
@@ -530,6 +530,7 @@
 
 </body>
 </html>
+
 
 
 
